--- a/tela_inicial.css
+++ b/tela_inicial.css
@@ -28,6 +28,7 @@
   align-items: center;
   flex-direction: column;
   height: 100vh;
+  background-image: url("https://i.pinimg.com/originals/7b/de/7f/7bde7f9095e04e3f7507ed19df9554b9.gif");
  
 }
 
