--- a/style.css
+++ b/style.css
@@ -597,3 +597,20 @@ button {
   cursor: pointer;
   padding: .1em .3em;
 }
+
+p{
+  animation: appear 1ms ease-in-out;
+  animation-timeline: view();
+  animation-range: cover 0% cover 40%;
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+    translate: -100vw 0;
+  }
+  to {
+    opacity: 1;
+    translate: 0 0;
+  }
+}
