--- a/style.css
+++ b/style.css
@@ -172,11 +172,9 @@ button {
 }
 
 .filho {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-size: cover;
-  border-radius: 10px;
+  width: 30%;
+}
+.filho-2 {
   width: 30%;
 }
 
