--- a/responsivo.css
+++ b/responsivo.css
@@ -95,5 +95,14 @@
       .nami img {
         width: 100%;
       }
+
+      .part-1::before {
+        height: 100vh;
+        content: "";
+        background-color: #000000b6;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+      }
     
   }
